# hsmtpd

./: .gitignore  .tramp_history  LICENSE  README.md  hsmtpd.cabal
app/: Main.hs
src/: SMTPserver.hs
src/SMTPserver/: Reply.hs
test/: SMTPserverSpec.hs
