name:                hsmtpd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kirisaki/hsmtpd#readme
license:             MIT
license-file:        LICENSE
author:              Akihito Kirisaki
maintainer:          kirisaki@klaraworks.net
copyright:           2017 Akihito kirisaki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SMTPserver
                     , SMTPserver.Reply
  build-depends:       base >= 4.7 && < 5
                     , network
                     , text
                     , mtl
  default-language:    Haskell2010

executable hsmtpd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , text
                     , mtl
                     , hsmtpd
  default-language:    Haskell2010

test-suite hsmtpd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsmtpd
                     , text
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kirisaki/hsmtpd
